Removed List.of as not Java 8 compatible.